force-app/main/default/objects/Asset_Master__c/Asset_Master__c.object-meta.xml
<CustomObject>
    <label>Asset Master</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Asset Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>