force-app/main/default/objects/Asset_Master__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Asset Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>