force-app/main/default/objects/Asset_Master__c/fields/Asset_Image__c.field-meta.xml
<CustomField>
    <fullName>Asset_Image__c</fullName>
    <label>Asset Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>