force-app/main/default/objects/Asset_Master__c/fields/Asset_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Asset_Serial_No__c</fullName>
    <label>Asset Serial No.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>