force-app/main/default/objects/Asset_Master__c/fields/OEM_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>OEM_Serial_Number__c</fullName>
    <label>QR Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>