force-app/main/default/objects/Asset_Master__c/fields/Skin_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>Skin_Change_Count__c</fullName>
    <description>How many times this freezer has been re-skinned. Mirrors Branding_Asset__c.Skin_Change_Count__c so both kinds of asset record a re-skin the same way.</description>
    <label>Skin Change Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>