force-app/main/default/objects/Asset_Master__c/fields/Skin_Change_History__c.field-meta.xml
<CustomField>
    <fullName>Skin_Change_History__c</fullName>
    <description>One dated line per re-skin: date, photo URL and who changed it. Mirrors Branding_Asset__c.Skin_Change_History__c. Oldest lines are dropped if the field fills up.</description>
    <label>Skin Change History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>