force-app/main/default/objects/Asset_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Code__c</columns>
    <columns>OEM_Serial_Number__c</columns>
    <columns>Asset_Serial_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>